@@ -3,6 +3,7 @@ fixed nodes never being marked as nfnocache/nfiscache in api3 which caused some 
 fixed memory bloat in python due to circular references when dealing with frame objects
 fixed vsrepo missing genstubs files
 fixed vfw and avfs speed regression from r55
+fixed mismatched format clips not working regression from r55
 
 r56:
 more or less a huge pile of bug/regression fixes for r55
